@@ -1484,7 +1484,7 @@ CONFIG_RA_HW_NAT_FIN_DLTA=5
 # AP MODE Ralink RT3xx/RT28xx wireless driver.
 #
 CONFIG_RT2860V2_AP=m
-CONFIG_RT2860V2_AP_V24_DATA_STRUCTURE=y
+# CONFIG_RT2860V2_AP_V24_DATA_STRUCTURE is not set
 CONFIG_RT2860V2_AP_LED=y
 CONFIG_RT2860V2_AP_WSC=y
 CONFIG_RT2860V2_AP_WIN7PREVIEW=y
